# yt-api

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/: complex_search.rs  search.rs
src/: lib.rs  playlistitems.rs  search.rs
src/api/: mod.rs  search.rs
