[package]
name = "yt-api"
version = "0.3.0-alpha.2"
description = "a work in progress library to interact asynchronously with the youtube api"
repository = "https://gitlab.com/nycex/yt-api"
documentation = "https://docs.rs/yt-api"
keywords = ["youtube", "api", "async"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
license = "MIT"
authors = ["nycex <nycex@protonmail.com>"]
edition = "2018"

[dependencies]
snafu = "0.5.0"
serde = { version = "1.0.102", features = [ "derive" ] }
serde_urlencoded = "0.6.1"
futures-preview = "=0.3.0-alpha.18"
serde_json = "1.0.41"
log = "0.4.8"
chrono = { version = "0.4.9", features = [ "serde" ] }
surf = "1.0.2"

[badges]
gitlab = { repository = "nycex/yt-api", branch = "master" }
maintenance = { status = "experimental" }
