[package]
name = "yt-api"
version = "0.3.0-alpha.2"
description = "a work in progress library to interact asynchronously with the youtube api"
repository = "https://codeberg.org/nycex/yt-api"
documentation = "https://docs.rs/yt-api"
keywords = ["youtube", "api", "async"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
license = "MIT"
authors = ["fdangelo <fdangelo@redhat.com>", "nycex <nycex@cccp.org>"]
edition = "2018"

[features]
default = ["native-client", "middleware-logger"]
native-client = ["surf/native-client"]
hyper-client = ["surf/hyper-client"]
curl-client = ["surf/curl-client"]
wasm-client = ["surf/wasm-client"]
middleware-logger = ["surf/middleware-logger"]

[dependencies]
snafu = "0.6.0"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_urlencoded = "0.6.1"
serde_json = "1.0.44"
log = "0.4.8"
chrono = { version = "0.4.10", features = [ "serde" ] }
surf = { version = "1.0.3", default-features = false }
futures = "0.3.1"

[badges]
maintenance = { status = "experimental" }
